# Multi-Type-TD-TSR

./: pyproject.toml
scripts/: table_detection.py
